--- a/recipes/katsu-curry.html
+++ b/recipes/katsu-curry.html
@@ -49,6 +49,6 @@
         <li>cover the pork chop in flour, then eggs mixture, and finally the panko bread crumbs</li>
         <li>submerge the covered pork cutlet into the frying oil and let cook for 8 minutes</li>
     </ol>
-    <h4>Serve by plating with rice with sliced cutlet on top then drisseled with the curry</h4>
+    <h4>Serve by plating with rice with sliced cutlet on top then drench with the curry</h4>
 </body>
 </html>
